<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_detail_event"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="Event Image"
            android:scaleType="centerCrop"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_detail_judul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/img_detail_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toTopOf="@+id/tv_detail_judul"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_detail_event"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_detail_owner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ownerName"
            android:textSize="18sp"
            android:textStyle="italic"
            android:layout_marginTop="5dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_judul"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_link_event"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/link"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:autoLink="web"
            app:layout_constraintTop_toBottomOf="@id/tv_detail_owner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TableLayout
            android:id="@+id/table_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@id/tv_link_event"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TableRow android:layout_margin="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textSize="16sp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="tv_summary"
                    android:textSize="16sp"
                    android:layout_weight="2" />
            </TableRow>

            <TableRow android:layout_margin="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textSize="16sp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="tv_category"
                    android:textSize="16sp"
                    android:layout_weight="2" />
            </TableRow>

            <TableRow android:layout_margin="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cityName"
                    android:textSize="16sp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_cityName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="tv_cityName"
                    android:textSize="16sp"
                    android:layout_weight="2" />
            </TableRow>

            <TableRow android:layout_margin="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/registrant"
                    android:textSize="16sp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_registrant"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="tv_registrant"
                    android:textSize="16sp"
                    android:layout_weight="2" />
            </TableRow>

            <TableRow android:layout_margin="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/quota"
                    android:textSize="16sp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_kuota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="tv_kuota"
                    android:textSize="16sp"
                    android:layout_weight="2" />
            </TableRow>

            <TableRow android:layout_margin="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sisa_kuota"
                    android:textSize="16sp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_sisa_kuota"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="tv_kuota"
                    android:textSize="16sp"
                    android:layout_weight="2" />
            </TableRow>

            <TableRow android:layout_margin="5dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:text="Detail Waktu"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow android:layout_margin="5dp">
                <TextView
                    android:id="@+id/tv_beginTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/beginTime"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="2" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="-"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_weight="0.5" />

                <TextView
                    android:id="@+id/tv_endTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/endTime"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_weight="2" />
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/title_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/table_detail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            android:id="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@id/title_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"
            android:textColor="@color/dark"
            android:id="@+id/btn_link"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
