<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    android:layout_margin="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="16dp"
    android:foreground="?attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <ImageView
            android:id="@+id/img_event"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:contentDescription="Event Image"
            android:scaleType="centerCrop"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="@+id/img_event"
            app:layout_constraintStart_toStartOf="@+id/img_event"
            app:layout_constraintTop_toBottomOf="@id/img_event"
            app:layout_constraintBottom_toTopOf="@+id/tv_ownerName" />

        <TextView
            android:id="@+id/tv_ownerName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ownerName"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/tv_quota"
            app:layout_constraintEnd_toEndOf="@+id/tv_judul"
            app:layout_constraintStart_toStartOf="@+id/tv_judul"
            app:layout_constraintTop_toBottomOf="@id/tv_judul" />

        <TextView
            android:id="@+id/tv_quota"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/sisa_kuota"
        app:layout_constraintBottom_toTopOf="@+id/tv_beginTime"
        app:layout_constraintEnd_toEndOf="@+id/tv_ownerName"
        app:layout_constraintStart_toStartOf="@+id/tv_ownerName"
        app:layout_constraintTop_toBottomOf="@id/tv_ownerName" />

        <TextView
            android:id="@+id/tv_beginTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/beginTime"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_quota"
            app:layout_constraintStart_toStartOf="@+id/tv_quota"
            app:layout_constraintTop_toBottomOf="@id/tv_quota" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
