<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:layout_marginBottom="40dp"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.687" />

        <TextView
            android:id="@+id/tv_dicoding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dicoding_event"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@color/medium_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/tv_upcoming"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/upcoming"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_dicoding" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_activeHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/tv_upcoming"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_finished" />

        <TextView
            android:id="@+id/tv_finished"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textSize="20sp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_activeHorizontal" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_activeVertikal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_finished"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
